--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,12 +20,12 @@ services:
       - "traefik.http.routers.koha-staff.rule=Host(`koha-staff.lipniacki.sh`)"
       - "traefik.http.routers.koha-staff.entrypoints=websecure"
       - "traefik.http.routers.koha-staff.tls=true"
-      - "traefik.http.routers.hoha-staff.tls.certResolver=sslresolver"
+      - "traefik.http.routers.koha-staff.tls.certResolver=sslresolver"
       - "traefik.http.services.koha-staff-lb.loadbalancer.server.port=8081"
       - "traefik.http.routers.koha-opac.rule=Host(`koha.lipniacki.sh`)"
       - "traefik.http.routers.koha-opac.entrypoints=websecure"
       - "traefik.http.routers.koha-opac.tls=true"
-      - "traefik.http.routers.hoha-opac.tls.certResolver=sslresolver"
+      - "traefik.http.routers.koha-opac.tls.certResolver=sslresolver"
       - "traefik.http.services.koha-opac-lb.loadbalancer.server.port=8080"
     depends_on:
       - db
